--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
       rel="stylesheet"
     />
+    <style>
+xmp{ white-space:pre-wrap; word-wrap:break-word; }
+</style>
     <title>React Material Dashboard</title>
   </head>
   <body>
