--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -4,7 +4,28 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+ <style>
+   .xmp {
+color : #75bf00;
+background-color : #fafff0;
+background-repeat : repeat-x;
+background-position : 50% top;
+margin-top : 1px;
+margin-bottom : 1px;
+padding : 2px;
+border : 1px solid #d4eba1;
+}
+.xmp a {
+color : #6db900;
+border-bottom : 1px dotted
+#cfe798;
+}
+.xmp a:hover {
+color : #92e31d;
+border-bottom : 1px dotted
+#e3f0c5;
+}
+   </style>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="material.min.css">
 
