--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -15,15 +15,15 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Badges</h1>
-    <b>Demo</b>
+    <h1>Badges</h1><br/>
+    <b>Demo</b><br/>
    <!-- Number badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
 <!-- Icon badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
    
    <b>Code</b>
-   
+   <div class="mdl-card__supporting-text">
    <xmp>
    <!-- Number badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
@@ -31,7 +31,7 @@
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
    
    </xmp>
-   
+   </div>
    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="material.min.js"></script> </body>
