--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -21,17 +21,17 @@
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
 <!-- Icon badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
-   
+   <br/>
    <b>Code</b>
-   <div class="mdl-card__supporting-text">
-   <xmp>
+    
+   <pre><code class="html">
+
    <!-- Number badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
 <!-- Icon badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
    
-   </xmp>
-   </div>
+   </code></pre>
    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="material.min.js"></script> </body>
