--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -10,7 +10,7 @@
    </style>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="material.min.css">
-
+ <link rel="stylesheet" href="vs.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Hello, world!</title>
   </head>
@@ -35,4 +35,7 @@
    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="material.min.js"></script> </body>
+   <script src=".js"></script> </body>
+
+
 </html>
