--- a/public/v1/teshig.html
+++ b/public/v1/teshig.html
@@ -31,7 +31,7 @@ function Triangle(base,height){
 <!-- partial -->
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://yandex.st/highlightjs/8.0/highlight.min.js'></script>
-<script  src="./script.js"></script>
+<script  src="script.js"></script>
 
 </body>
 </html>
