--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -24,14 +24,14 @@
    <br/>
    <b>Code</b>
     
-   <pre><code class="html">
+   <code class="html"><xmp>
 
    <!-- Number badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
 <!-- Icon badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
-   
-   </code></pre>
+   </xmp>
+   </code>
    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="material.min.js"></script> </body>
