--- a/public/v1/copy/index.html
+++ b/public/v1/copy/index.html
@@ -8,8 +8,8 @@
 
         <!-- Cod Box Copy begin -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css" rel="stylesheet">
-        <link href="code-box-copy/css/code-box-copy.css" rel="stylesheet">
-        <script src="js/jquery.min.js"></script>
+        <link href="code-box-copy.css" rel="stylesheet">
+        <script src="jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
 
