--- a/public/v1/copy/index.html
+++ b/public/v1/copy/index.html
@@ -13,7 +13,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
 
-        <script src="code-box-copy/js/code-box-copy.js"></script>
+        <script src="code-box-copy.js"></script>
         <!-- Cod Box Copy end -->
         
         <style>
