--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -40,7 +40,7 @@
     
     <main class="mdl-layout__content">
     <div class="page-content">
-    <h1>MEMULAI</h1>
+   Sertakan file Material Lite CSS dan JavaScript di setiap halaman HTML di proyek Anda. Kami menyarankan Anda menggunakan <b>file yang dihosting di CDN kami</b>
     
     <div class="phdr">
 <pre><span style="color:#d2cd86; ">&lt;</span>!doctype html<span style="color:#d2cd86; ">&gt;</span>
