--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -39,7 +39,8 @@
   </div>
     
     <main class="mdl-layout__content">
-    <div class="page-content">
+    <div class="page-content"><br/>
+      <b>Sertakan CSS & JavaScript</b><hr/>
    Sertakan file Material Lite CSS dan JavaScript di setiap halaman HTML di proyek Anda. Kami menyarankan Anda menggunakan <b>file yang dihosting di CDN kami</b>
     
     <div class="phdr">
