--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -45,7 +45,7 @@
     <br/>
       <div clss="phdr">
         
-<pre style="color:#d1d1d1;background:#000000;"><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
+<pre>&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"https://fonts.googleapis.com/icon?family=Material+Icons"</span><span style="color:#d2cd86; ">&gt;</span>
 </pre>
@@ -53,14 +53,17 @@
       </div>
       <br/>
       <b>Aturan Umum</b>
-      <hr/><ul>
-      Secara umum, ikuti langkah-langkah dasar ini untuk menggunakan komponen MDL di halaman HTML Anda:</li>
+      <hr/>
+      <ol>
+      Secara umum, ikuti langkah-langkah dasar ini untuk menggunakan komponen MDL di halaman HTML Anda:
       <li>
 Mulailah dengan elemen HTML standar, seperti <button>, <div>, atau <ul>, tergantung pada komponen MDL yang ingin Anda gunakan.
-        Ini menetapkan elemen di halaman dan menyiapkannya untuk modifikasi MDL.</li><li>
+        Ini menetapkan elemen di halaman dan menyiapkannya untuk modifikasi MDL.</li>
+        <li>
 Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti mdl-buttonatau mdl-tabs__panel, lagi tergantung pada komponen. Kelas menerapkan peningkatan MDL ke elemen dan mengubahnya menjadi komponen MDL.
-        </li>Ingatlah untuk menyertakan tag meta viewport dalam dokumen Anda sehingga perangkat seluler akan merender dengan benar.
-        </ul>
+        </li>
+        Ingatlah untuk menyertakan tag meta viewport dalam dokumen Anda sehingga perangkat seluler akan merender dengan benar.
+        </ol>
     <div class="phdr">
 <pre><span style="color:#d2cd86; ">&lt;</span>!doctype html<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>html lang<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"en"</span><span style="color:#d2cd86; ">&gt;</span>
