--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -57,10 +57,10 @@
       <ol>
       Secara umum, ikuti langkah-langkah dasar ini untuk menggunakan komponen MDL di halaman HTML Anda:
       <li>
-Mulailah dengan elemen HTML standar, seperti <button>, <div>, atau <ul>, tergantung pada komponen MDL yang ingin Anda gunakan.
+Mulailah dengan elemen HTML standar, seperti <xmp><button></xmp>, <xmp><div></xmp>, atau <xmp><ul></xmp>, tergantung pada komponen MDL yang ingin Anda gunakan.
         Ini menetapkan elemen di halaman dan menyiapkannya untuk modifikasi MDL.</li>
         <li>
-Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti mdl-buttonatau mdl-tabs__panel, lagi tergantung pada komponen. Kelas menerapkan peningkatan MDL ke elemen dan mengubahnya menjadi komponen MDL.
+Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti <xmp>mdl-buttonatau mdl-tabs__panel</xmp>, lagi tergantung pada komponen. Kelas menerapkan peningkatan MDL ke elemen dan mengubahnya menjadi komponen MDL.
         </li>
         Ingatlah untuk menyertakan tag meta viewport dalam dokumen Anda sehingga perangkat seluler akan merender dengan benar.
         </ol>
