--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -29,7 +29,7 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Title</span>
+    <span class="mdl-layout-title">Garangan OPensource</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="">Link</a>
       <a class="mdl-navigation__link" href="">Link</a>
@@ -45,7 +45,7 @@
     <br/>
       <div clss="phdr">
         
-<pre>&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
+<pre><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"https://fonts.googleapis.com/icon?family=Material+Icons"</span><span style="color:#d2cd86; ">&gt;</span>
 </pre>
@@ -57,7 +57,7 @@
       <ol>
       Secara umum, ikuti langkah-langkah dasar ini untuk menggunakan komponen MDL di halaman HTML Anda:
       <li>
-Mulailah dengan elemen HTML standar, seperti <xmp><button></xmp>, <xmp><div></xmp>, atau <xmp><ul></xmp>, tergantung pada komponen MDL yang ingin Anda gunakan.
+Mulailah dengan elemen HTML standar, seperti <xmp><button>,<div>, atau <ul></xmp>, tergantung pada komponen MDL yang ingin Anda gunakan.
         Ini menetapkan elemen di halaman dan menyiapkannya untuk modifikasi MDL.</li>
         <li>
 Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti <xmp>mdl-buttonatau mdl-tabs__panel</xmp>, lagi tergantung pada komponen. Kelas menerapkan peningkatan MDL ke elemen dan mengubahnya menjadi komponen MDL.
