--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -16,7 +16,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title"><b>Gᴀʀᴀɴɢᴀɴ</b></span>
+      <span class="mdl-layout-title"><b>Gᴀʀᴀɴɢᴀɴ</b> <small>Opensource</small></span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
