--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -62,6 +62,17 @@ Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti <xmp>mdl-but
         </li>
         Ingatlah untuk menyertakan tag meta viewport dalam dokumen Anda sehingga perangkat seluler akan merender dengan benar.
         </ol>
+
+Tes
+
+  <div clss="phdr">      
+<pre><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"https://fonts.googleapis.com/icon?family=Material+Icons"</span><span style="color:#d2cd86; ">&gt;</span>
+</pre>
+      </div>
+
+tess
     <div class="phdr">
 <pre><span style="color:#d2cd86; ">&lt;</span>!doctype html<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>html lang<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"en"</span><span style="color:#d2cd86; ">&gt;</span>
