--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -44,7 +44,7 @@
    Sertakan file Material Lite CSS dan JavaScript di setiap halaman HTML di proyek Anda. Kami menyarankan Anda menggunakan <b>file yang dihosting di CDN kami</b>
     <br/>
       <div clss="phdr">      
-<pre style="color:#d1d1d1;background:#000000;"><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
+<pre><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"https://fonts.googleapis.com/icon?family=Material+Icons"</span><span style="color:#d2cd86; ">&gt;</span>
 </pre>
