--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -44,7 +44,7 @@
    Sertakan file Material Lite CSS dan JavaScript di setiap halaman HTML di proyek Anda. Kami menyarankan Anda menggunakan <b>file yang dihosting di CDN kami</b>
     <br/>
       <div clss="phdr">      
-<pre><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
+<pre style="color:#d1d1d1;background:#000000;"><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"https://fonts.googleapis.com/icon?family=Material+Icons"</span><span style="color:#d2cd86; ">&gt;</span>
 </pre>
@@ -62,17 +62,16 @@ Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti <xmp>mdl-but
         </li>
         Ingatlah untuk menyertakan tag meta viewport dalam dokumen Anda sehingga perangkat seluler akan merender dengan benar.
         </ol>
-
-Tes
+<br/>
 
   <div clss="phdr">      
-<pre><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
-<span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span>
-<span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"https://fonts.googleapis.com/icon?family=Material+Icons"</span><span style="color:#d2cd86; ">&gt;</span>
+
+<pre style="color:#d1d1d1;background:#000000;"><span style="color:#d2cd86; ">&lt;</span>meta <span style="color:#e66170; font-weight:bold; ">name</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"viewport"</span> content<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"width=device-width, initial-scale=1.0"</span><span style="color:#d2cd86; ">&gt;</span>
 </pre>
+
       </div>
 
-tess
+
     <div class="phdr">
 <pre><span style="color:#d2cd86; ">&lt;</span>!doctype html<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>html lang<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"en"</span><span style="color:#d2cd86; ">&gt;</span>
