--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -71,6 +71,9 @@ Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti <xmp>mdl-but
 
       </div>
 
+<b>Tata Letak Web HTML</b><hr/>
+<ol>Hal pertama yang harus kita lakukan untuk Web kita adalah membuat <b>index.html</b> Mari kita lihat tata letak aplikasi dasar:
+</ol>
 
     <div class="phdr">
 <pre><span style="color:#d2cd86; ">&lt;</span>!doctype html<span style="color:#d2cd86; ">&gt;</span>
@@ -95,7 +98,8 @@ Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti <xmp>mdl-but
     <span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span> <span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>body<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>html<span style="color:#d2cd86; ">&gt;</span>
 </pre>
-
+<ol>
+Seperti yang Anda lihat tata letaknya cukup sederhana. Poin utamanya adalah Anda harus menautkan CSS di <xmp><head></xmp> file JS dan di akhir <xmp><body></xmp>.</ol>
 </div>
     </div>
     </main>
