--- a/public/v1/index.html
+++ b/public/v1/index.html
@@ -41,14 +41,14 @@
     <main class="mdl-layout__content">
     <div class="docs-content"><br/>
       <b>Sertakan CSS & JavaScript</b><hr/>
-   Sertakan file Material Lite CSS dan JavaScript di setiap halaman HTML di proyek Anda. Kami menyarankan Anda menggunakan <b>file yang dihosting di CDN kami</b>
-    <br/>
-      <div clss="phdr">      
+  <ol> Sertakan file Material Lite CSS dan JavaScript di setiap halaman HTML di proyek Anda. Kami menyarankan Anda menggunakan <b>file yang dihosting di CDN kami</b>
+    </ol><br/>
+      <ol><div clss="phdr">      
 <pre style="color:#d1d1d1;background:#000000;"><span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.css"</span><span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"./material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>link rel<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"stylesheet"</span> href<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"https://fonts.googleapis.com/icon?family=Material+Icons"</span><span style="color:#d2cd86; ">&gt;</span>
 </pre>
-</div>
+</div></ol>
       <br/>
       <b>Aturan Umum</b>
       <hr/>
@@ -64,17 +64,17 @@ Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti <xmp>mdl-but
         </ol>
 <br/>
 
-  <div clss="phdr">      
+  <ol><div clss="phdr">      
 
 <pre style="color:#d1d1d1;background:#000000;"><span style="color:#d2cd86; ">&lt;</span>meta <span style="color:#e66170; font-weight:bold; ">name</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"viewport"</span> content<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"width=device-width, initial-scale=1.0"</span><span style="color:#d2cd86; ">&gt;</span>
 </pre>
 
       </div>
-
+</ol>
 <b>Tata Letak Web HTML</b><hr/>
 <ol>Hal pertama yang harus kita lakukan untuk Web kita adalah membuat <b>index.html</b> Mari kita lihat tata letak aplikasi dasar:
 </ol>
-
+<ol>
     <div class="phdr">
 <pre><span style="color:#d2cd86; ">&lt;</span>!doctype html<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>html lang<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"en"</span><span style="color:#d2cd86; ">&gt;</span>
@@ -97,10 +97,9 @@ Tambahkan satu atau lebih kelas CSS spesifik MDL ke elemen, seperti <xmp>mdl-but
     <span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> jQuery first<span style="color:#d2cd86; ">,</span> <span style="color:#e66170; font-weight:bold; ">then</span> Popper<span style="color:#00a800; ">.</span>js<span style="color:#d2cd86; ">,</span> <span style="color:#e66170; font-weight:bold; ">then</span> Bootstrap JS <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
     <span style="color:#d2cd86; ">&lt;</span>script src<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material.min.js"</span><span style="color:#d2cd86; ">&gt;</span><span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>script<span style="color:#d2cd86; ">&gt;</span> <span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>body<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>html<span style="color:#d2cd86; ">&gt;</span>
-</pre>
+</pre></div></ol>
 <ol>
 Seperti yang Anda lihat tata letaknya cukup sederhana. Poin utamanya adalah Anda harus menautkan CSS di <xmp><head></xmp> file JS dan di akhir <xmp><body></xmp>.</ol>
-</div>
     </div>
     </main>
 
