--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -78,8 +78,9 @@
     </ul>
   </div>
 </div>
-      
-      
+      <b> PENGANTAR</b><hr/><ol>
+Komponen lencana Material Design Lite (MDL) adalah elemen pemberitahuan di layar. Lencana terdiri dari lingkaran kecil, biasanya berisi angka atau karakter lain, yang muncul di dekat objek lain. Lencana dapat berupa pemberitahuan bahwa ada item tambahan yang terkait dengan objek dan indikator berapa banyak item yang ada.  
+      </ol>
       ggg </div>
     </main>
 
