--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -45,9 +45,9 @@
       <p>Penjelas status kecil untuk elemen UI.</p>
       <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
   <div class="mdl-tabs__tab-bar">
-      <a href="#starks-panel" class="mdl-tabs__tab is-active">Examples</a>
+     <p align="left"> <a href="#starks-panel" class="mdl-tabs__tab is-active">Examples</a>
       <a href="#lannisters-panel" class="mdl-tabs__tab">Code</a>
-   
+    </p>
   </div>
 
   <div class="mdl-tabs__panel is-active" id="starks-panel">
@@ -59,17 +59,17 @@
     </ul>
   </div>
   <div class="mdl-tabs__panel" id="lannisters-panel">
-    <ul>
+    
       <div class="container">
         <div class="phdr">
-<pre style="color:#d1d1d1;background:#000000;"><span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Number badge <span style="color:#e66170; font-weight:bold; ">on</span> icon <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<pre><span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Number badge <span style="color:#e66170; font-weight:bold; ">on</span> icon <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>div <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material-icons mdl-badge mdl-badge--overlap"</span> data<span style="color:#d2cd86; ">-</span>badge<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"1"</span><span style="color:#d2cd86; ">&gt;</span>account_box<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>div<span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Icon badge <span style="color:#e66170; font-weight:bold; ">on</span> icon <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
 <span style="color:#d2cd86; ">&lt;</span>div <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material-icons mdl-badge mdl-badge--overlap"</span> data<span style="color:#d2cd86; ">-</span>badge<span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"♥"</span><span style="color:#d2cd86; ">&gt;</span>account_box<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>div<span style="color:#d2cd86; ">&gt;</span>
 </pre>
         </div>
       </div>
-    </ul>
+    
   </div>
   <div class="mdl-tabs__panel" id="targaryens-panel">
     <ul>
@@ -80,6 +80,8 @@
 </div>
       <b> PENGANTAR</b><hr/><ol>
 Komponen lencana Material Design Lite (MDL) adalah elemen pemberitahuan di layar. Lencana terdiri dari lingkaran kecil, biasanya berisi angka atau karakter lain, yang muncul di dekat objek lain. Lencana dapat berupa pemberitahuan bahwa ada item tambahan yang terkait dengan objek dan indikator berapa banyak item yang ada.  
+      </ol>
+      <ol>Anda dapat menggunakan lencana untuk menarik perhatian pengguna ke item yang mungkin tidak mereka sadari, atau untuk menekankan bahwa item mungkin membutuhkan perhatian mereka. Sebagai contoh:
       </ol>
       ggg </div>
     </main>
