--- a/public/v1/tes.html
+++ b/public/v1/tes.html
@@ -1,25 +1,32 @@
 <html>
 <head>
 <title></title>
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script> 
-$(function(){
-  $("#header").load("header.html"); 
-  $("#footer").load("footer.html"); 
-});
+<script>
+ fetch("header.html")
+  .then(response => {
+    return response.text()
+  })
+  .then(data => {
+    document.querySelector("header").innerHTML = data;
+  });
+
+fetch("footer.html")
+  .then(response => {
+    return response.text()
+  })
+  .then(data => {
+    document.querySelector("footer").innerHTML = data;
+  });
 </script> 
 </head>
 <body>
-<div id="header"></div>
- <main class="mdl-layout__content">
-    <div class="docs-content"><br/>
-      <b>Sertakan CSS & JavaScript</b><hr/>
-  <ol> Sertakan file Material Lite CSS dan JavaScript di setiap halaman HTML di proyek Anda. Kami menyarankan Anda menggunakan <b>file yang dihosting di CDN kami</b>
-    </ol><br/>
-    </div>
-    </main>
+  
+  <header></header>
+  
+  Content.fff
+  
+  <footer></footer>
 
-<!--Remaining section-->
-<div id="footer"></div>
+</body>
 </body>
 </html>
