--- a/public/v1/tes.html
+++ b/public/v1/tes.html
@@ -23,7 +23,21 @@ fetch("footer.html")
   
   <header></header>
   
-  Content.fff
+  <div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">Title</span>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="">Link</a>
+    </nav>
+  </div>
+  <main class="mdl-layout__content">
+    <div class="page-content"><!-- Your content goes here -->
+Yayannn hfgcbb 
+</div>
+  </main>
+</div>
   
   <footer></footer>
 
