--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -43,8 +43,8 @@
       <b>Badges</b>
       <hr/>
       <p>Penjelas status kecil untuk elemen UI.</p>
-     <ol>
-Demo<hr/>
+     <ol><br>
+<b>Demo</b><br/>
   
       <!-- Number badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
@@ -61,13 +61,13 @@ Demo<hr/>
         </div>
       </div>
     
-  <ol>Demo<hr/>
+  <ol><br><b>Demo</b><br/>
       
 <span class="mdl-badge" data-badge="4">Inbox</span>
 <!-- Icon badge -->
 <span class="mdl-badge" data-badge="♥">Mood</span>
 </ol>
-
+<br/>
       <div class="container">
         <div class="phdr">
 
