--- a/public/v1/badges.html
+++ b/public/v1/badges.html
@@ -44,7 +44,7 @@
       <hr/>
       <p>Penjelas status kecil untuk elemen UI.</p>
      <ol><br>
-<b>Demo</b><br/><br><br>
+<b><i>Demo</i></b><br/><br/>
   
       <!-- Number badge on icon -->
 <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
@@ -61,7 +61,7 @@
         </div>
       </div>
     
-  <ol><br><b>Demo</b><br/><br><br>
+  <ol><br><b><i>Demo</i></b><br/><br/>
       
 <span class="mdl-badge" data-badge="4">Inbox</span>
 <!-- Icon badge -->
