--- a/public/v1/button.html
+++ b/public/v1/button.html
@@ -73,6 +73,19 @@ Variasi pada tombol Desain Material.
 </button>
 <br/>
 
+<div class="phdr">
+
+<pre><span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Colored FAB button <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>button <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"mdl-button mdl-js-button mdl-button--fab mdl-button--colored"</span><span style="color:#d2cd86; ">&gt;</span>
+  <span style="color:#d2cd86; ">&lt;</span>i <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material-icons"</span><span style="color:#d2cd86; ">&gt;</span>add<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>i<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Colored FAB button <span style="color:#e66170; font-weight:bold; ">with</span> ripple <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>button <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"</span><span style="color:#d2cd86; ">&gt;</span>
+  <span style="color:#d2cd86; ">&lt;</span>i <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material-icons"</span><span style="color:#d2cd86; ">&gt;</span>add<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>i<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
+</pre>
+
+</div>
 </div>
     </main>
 
