--- a/public/v1/button.html
+++ b/public/v1/button.html
@@ -61,7 +61,7 @@
 <h2>BUTTON</h2><ol>
 Variasi pada tombol Desain Material.
 </ol>
-<br><b>Demo<b><br/>
+<br><b>Demo<b><br/><br/>
 
 <!-- Colored FAB button -->
 <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
@@ -86,6 +86,37 @@ Variasi pada tombol Desain Material.
 </pre>
 
 </div>
+
+<br/><b>Demo</b><br/><br/>
+<!-- FAB button -->
+<button class="mdl-button mdl-js-button mdl-button--fab">
+  <i class="material-icons">add</i>
+</button>
+<!-- FAB button with ripple -->
+<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+  <i class="material-icons">add</i>
+</button>
+<!-- Disabled FAB button -->
+<button class="mdl-button mdl-js-button mdl-button--fab" disabled>
+  <i class="material-icons">add</i>
+</button>
+<div class="phdr">
+
+<pre><span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> FAB button <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>button <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"mdl-button mdl-js-button mdl-button--fab"</span><span style="color:#d2cd86; ">&gt;</span>
+  <span style="color:#d2cd86; ">&lt;</span>i <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material-icons"</span><span style="color:#d2cd86; ">&gt;</span>add<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>i<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> FAB button <span style="color:#e66170; font-weight:bold; ">with</span> ripple <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>button <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect"</span><span style="color:#d2cd86; ">&gt;</span>
+  <span style="color:#d2cd86; ">&lt;</span>i <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material-icons"</span><span style="color:#d2cd86; ">&gt;</span>add<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>i<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Disabled FAB button <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>button <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"mdl-button mdl-js-button mdl-button--fab"</span> disabled<span style="color:#d2cd86; ">&gt;</span>
+  <span style="color:#d2cd86; ">&lt;</span>i <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"material-icons"</span><span style="color:#d2cd86; ">&gt;</span>add<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>i<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
+</pre>
+</div>
+
 </div>
     </main>
 
