--- a/public/v1/button.html
+++ b/public/v1/button.html
@@ -61,7 +61,7 @@
 <h2>BUTTON</h2><ol>
 Variasi pada tombol Desain Material.
 </ol>
-<br><b>Demo<b><br/><br/>
+<br/><br/>
 
 <!-- Colored FAB button -->
 <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
@@ -72,7 +72,7 @@ Variasi pada tombol Desain Material.
   <i class="material-icons">add</i>
 </button>
 <br/>
-
+<br/>
 <div class="phdr">
 
 <pre><span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Colored FAB button <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
@@ -86,8 +86,8 @@ Variasi pada tombol Desain Material.
 </pre>
 
 </div>
-
-<br/><b>Demo</b><br/><br/>
+<br/>
+<br/>
 <!-- FAB button -->
 <button class="mdl-button mdl-js-button mdl-button--fab">
   <i class="material-icons">add</i>
@@ -99,7 +99,7 @@ Variasi pada tombol Desain Material.
 <!-- Disabled FAB button -->
 <button class="mdl-button mdl-js-button mdl-button--fab" disabled>
   <i class="material-icons">add</i>
-</button>
+</button><br/><br/>
 <div class="phdr">
 
 <pre><span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> FAB button <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
