--- a/public/v1/button.html
+++ b/public/v1/button.html
@@ -62,7 +62,7 @@
 Variasi pada tombol Desain Material.
 </ol>
 <br/><br/>
-
+<ol>
 <!-- Colored FAB button -->
 <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
   <i class="material-icons">add</i>
@@ -70,7 +70,7 @@ Variasi pada tombol Desain Material.
 <!-- Colored FAB button with ripple -->
 <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
   <i class="material-icons">add</i>
-</button>
+</button></ol>
 <br/>
 <br/>
 <div class="phdr">
@@ -87,7 +87,7 @@ Variasi pada tombol Desain Material.
 
 </div>
 <br/>
-<br/>
+<br/><ol>
 <!-- FAB button -->
 <button class="mdl-button mdl-js-button mdl-button--fab">
   <i class="material-icons">add</i>
@@ -99,7 +99,7 @@ Variasi pada tombol Desain Material.
 <!-- Disabled FAB button -->
 <button class="mdl-button mdl-js-button mdl-button--fab" disabled>
   <i class="material-icons">add</i>
-</button><br/><br/>
+</button></ol><br/><br/>
 <div class="phdr">
 
 <pre><span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> FAB button <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
