--- a/public/v1/button.html
+++ b/public/v1/button.html
@@ -116,7 +116,39 @@ Variasi pada tombol Desain Material.
 <span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
 </pre>
 </div>
+<br/><br/>
+<ol>
+<!-- Raised button -->
+<button class="mdl-button mdl-js-button mdl-button--raised">
+  Button
+</button>
+<!-- Raised button with ripple -->
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+  Button
+</button>
+<!-- Raised disabled button -->
+<button class="mdl-button mdl-js-button mdl-button--raised" disabled>
+  Button
+</button>
+</ol>
+<br/><br/>
+<div class="phdr">
 
+<pre style="color:#d1d1d1;background:#000000;"><span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Raised button <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>button <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"mdl-button mdl-js-button mdl-button--raised"</span><span style="color:#d2cd86; ">&gt;</span>
+  Button
+<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Raised button <span style="color:#e66170; font-weight:bold; ">with</span> ripple <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>button <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"</span><span style="color:#d2cd86; ">&gt;</span>
+  Button
+<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>!<span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span> Raised disabled button <span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">-</span><span style="color:#d2cd86; ">&gt;</span>
+<span style="color:#d2cd86; ">&lt;</span>button <span style="color:#e66170; font-weight:bold; ">class</span><span style="color:#d2cd86; ">=</span><span style="color:#00c4c4; ">"mdl-button mdl-js-button mdl-button--raised"</span> disabled<span style="color:#d2cd86; ">&gt;</span>
+  Button
+<span style="color:#d2cd86; ">&lt;</span><span style="color:#d2cd86; ">/</span>button<span style="color:#d2cd86; ">&gt;</span>
+</pre>
+
+</div>
 </div>
     </main>
 
